Properly add sources and inject run configs to idea. Now we don't have to generate build.gradle files on setup